.kubernetes/frontend-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weremain-deployment
  # these labels can be applied automatically
  # from the labels in the pod template if not set
  labels:
    app: weremain
    tier: frontend
spec:
  replicas: 1
  # Pod Template
  template:
    metadata:
      labels:
        app: weremain
        tier: frontend
    spec:
      containers:
      - name: weremain-webapp
        # private Container Registry image
        image: gcr.io/black-network-156417/weremain-webapp
        resources:
          # The resources specification for each Pod, more details here:
          # http://kubernetes.io/v1.1/docs/design/resources.html#resource-specifications
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          # More details on the container ports here,
          # http://kubernetes.io/v1.1/docs/api-reference/v1/definitions.html#_v1_containerport
          # The port exposed by the container
        - containerPort: 4200
